re PR middle-end/40747 (wrong code for int-is-in-range test at -O1 and above)

PR middle-end/40747
	* fold-const.c (fold_cond_expr_with_comparison): When folding
	< and <= to MIN, make sure the MIN uses the same type as the
	comparison's operands.

	* gcc.c-torture/execute/pr40747.c: New test.

From-SVN: r149681